TEST_PROGRAMS/INVALID/david_rapoport/invalid5.min
# can't assign to a constant
var pl : int;
5 = pl;
